added social meta

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:type" content="article" />
+		<meta property="og:title" content="Arun Yokesh - Online Portfolio" />
+		<meta property="og:description" content="blah Blah Blah!" />
+		<meta property="og:url" content="http://yokesharun.github.io" />
+		<meta property="og:site_name" content="Arun Yokesh" />
+		<meta property="og:image" content="assets/images/logo-9.png" />
+
 		<!-- ==============================================
 		Favicons
 		=============================================== -->
