--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
 
 		</script>
 
-		<script src="http://it.appoets.co/it-script/impulse-script.js"></script>
+		<script src="http://www.padapotti.com/it-script/impulse-script.js"></script>
 <script type="text/javascript">
 var domain=document.domain,loc=window.location.href;
 impluse(loc,"it-659560",domain);
