--- a/projects/your-details/index.html
+++ b/projects/your-details/index.html
@@ -16,7 +16,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="jquery project will tell your details">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>I Will Tell Your Details</title>
 
@@ -92,8 +92,8 @@
     <script type="text/javascript">
         $(document).ready(function(){
             var all = "";
-            all = "<h2>You are Using "+ window.ui.browser +"("+window.ui.version+")</br></br>";
-            all += "Operating on "+ window.ui.os+"("+window.ui.osversion+")</br><br>";
+            all = "<h2>You are Using "+ window.ui.browser +" ("+window.ui.version+")</br></br>";
+            all += "Operating on "+ window.ui.os+" ("+window.ui.osversion+")</br><br>";
             all += " Your "+ is_mobile+ " is so cool! </br></br>"; 
             $.get('http://freegeoip.net/json/',function(freegeoip_data){
               all += "and your public address "+ freegeoip_data['ip'] ;
