--- a/projects/your-details/index.html
+++ b/projects/your-details/index.html
@@ -92,7 +92,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
             var all = "";
-            all = "<h2>You are Using "+ window.ui.browser +" ("+window.ui.version+")</br></br>";
+            all = "<h2 style='font-size:2.5em;'>You are Using "+ window.ui.browser +" ("+window.ui.version+")</br></br>";
             all += "Operating on "+ window.ui.os+" ("+window.ui.osversion+")</br><br>";
             all += " Your "+ is_mobile+ " is so cool! </br></br>"; 
             $.get('http://freegeoip.net/json/',function(freegeoip_data){
