it script added

--- a/index.html
+++ b/index.html
@@ -674,6 +674,14 @@
 		  ga('send', 'pageview');
 
 		</script>
+
+		<script src="http://it.appoets.co/it-script/impulse-script.js"></script>
+<script type="text/javascript">
+var domain=document.domain,loc=window.location.href;
+impluse(loc,"it-432125",domain);
+</script>
+
+		
 		
 	</body>
 </html>
