--- a/index.html
+++ b/index.html
@@ -1069,5 +1069,15 @@
         <script type="text/javascript" src="js/jquery.fitvids.js"></script>
     </body>
 
-<!-- Mirrored from webagate.com/demos/alia/onepage-vcard-resume-portfolio-website-template/Light-Version/Index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 13 Feb 2016 07:15:58 GMT -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66039652-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 </html>
