--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         </div>
                         <div class="line1">HOBBIES<br>
                             <span class="line2">ORIGAMI, PHOTOGRAPHY, MOVIES</span> 
-                            <a href="#banner1" onClick="_gaq.push([‘_trackEvent’, ‘banner’, ‘internal link’, ‘banner 1’]);">sampple link</a>
+                            <a href="http://appoets.com" target="_blank" onClick="_gaq.push([‘_trackEvent’, ‘whitepaper’, ‘download’, ‘SEO is great’, 5, true]);">sampple link</a>
                         </div>
                     </div>
                     <!-- Left Column Ends -->
