added test script

--- a/index.html
+++ b/index.html
@@ -371,6 +371,8 @@
                         <div class="line1">HOBBIES<br>
                             <span class="line2">ORIGAMI, PHOTOGRAPHY, MOVIES</span> 
                             <a href="http://appoets.com" target="_blank" onClick="_gaq.push([‘_trackEvent’, ‘whitepaper’, ‘download’, ‘SEO is great’, 5, true]);">test link</a>
+
+                            <a href="www.google.com" onclick="ga('send', 'event', 'Google Link', 'Action label', 'Action Value');">link</a>
                         </div>
                     </div>
                     <!-- Left Column Ends -->
