--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                                 <div class="arrow"></div>
                                 <div class="company-name">APPOETS</div>
                                 <div class="designation">DEVELOPER</div>
-                                <div class="duration">SEP 2016 - TILL NOW</div>
+                                <div class="duration">SEP 2015 - AUG 2016</div>
                                 <div class="description">PONDICHERRY, INDIA.</div>
                                 <div class="url"><a target="_blank" href="http://appoets.com">www.appoets.com</a></div>
 
@@ -682,7 +682,7 @@
                                 <div class="arrow"></div>
                                 <div class="company-name">PROVENLOGIC</div>
                                 <div class="designation">SOFTWARE DEVELOPER</div>
-                                <div class="duration">FEB 2015 - SEP 2016</div>
+                                <div class="duration">FEB 2015 - SEP 2015</div>
                                 <div class="description">BANGALORE, INDIA</div>
                                 <div class="url"><a href="http://provenlogic.com" target="_blank">www.provenlogic.com</a></div>
                             </div>
@@ -690,6 +690,35 @@
                         <!-- Right Column Starts --> 
                     </div>
                     <!-- Row 2 Ends --> 
+                    <!-- Row 3 Starts -->
+                    <div class="row">
+                        <!-- Left Column Starts -->
+                        <div class="col-md-6 col-xs-6">
+                            <div class="col-left">
+                                <div class="arrow"></div>
+                                <div class="company-name">TANJARA INFOTECH</div>
+                                <div class="designation">DEVELOPER</div>
+                                <div class="duration">AUG 2016 - TILL NOW</div>
+                                <div class="description">CHENNAI, INDIA.</div>
+                                <div class="url"><a target="_blank" href="http://tanjarainfotech.com">www.tanjarainfotech.com</a></div>
+
+                            </div>
+                        </div>
+                        <!-- Left Column Ends --> 
+                        <!-- Right Column Starts -->
+                        <!-- <div class="col-md-6 col-xs-6">
+                            <div class="col-right">
+                                <div class="arrow"></div>
+                                <div class="company-name">PROVENLOGIC</div>
+                                <div class="designation">SOFTWARE DEVELOPER</div>
+                                <div class="duration">FEB 2015 - SEP 2016</div>
+                                <div class="description">BANGALORE, INDIA</div>
+                                <div class="url"><a href="http://provenlogic.com" target="_blank">www.provenlogic.com</a></div>
+                            </div>
+                        </div> -->
+                        <!-- Right Column Starts --> 
+                    </div>
+                    <!-- Row 3 Ends --> 
                 </div>
                 <!-- Education Timeline Ends -->
                 <hr>
